--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "your-library-name",
-  "version": "1.0.0",
-  "description": "A TypeScript library for JavaScript users",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "test": "echo \"No tests specified\" && exit 0"
-  },
-  "keywords": ["typescript", "library"],
-  "author": "Your Name",
-  "license": "MIT",
-  "dependencies": {
-    "@types/bun": "latest",
-    "@types/jest": "^29.5.14",
-    "install": "^0.13.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2"
-  },
-  "devDependencies": {
-    "typescript": "^4.0.0"
-  }
+    "name": "jiffyscan-graph-wrapper",
+    "version": "1.0.1",
+    "description": "A TypeScript library for JavaScript users",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "build": "tsc",
+        "test": "echo \"No tests specified\" && exit 0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/username/repository.git"
+    },
+    "keywords": [
+        "blockchain",
+        "address",
+        "activity",
+        "graph",
+        "typescript",
+        "userOps",
+        "account-abstraction"
+    ],
+    "author": "Gautam G Sabhahit",
+    "license": "MIT",
+    "dependencies": {
+        "@types/bun": "latest",
+        "@types/jest": "^29.5.14",
+        "install": "^0.13.0",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2"
+    },
+    "devDependencies": {
+        "typescript": "^4.0.0"
+    }
 }
