--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
     "name": "jiffyscan-graph-wrapper",
-    "version": "1.0.1",
+    "version": "1.0.4",
     "description": "A TypeScript library for JavaScript users",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "build": "tsc",
-        "test": "echo \"No tests specified\" && exit 0"
+        "dev": "bun --watch src/index.ts",
+        "build": "tsup ./src/index.ts --format cjs,esm --dts",
+        "release": "pnpm run build && changeset publish",
+        "lint": "tsc",
+        "build-esm": "tsup ./src/index.ts --format esm --dts --outDir dist/esm",
+        "start": "NODE_ENV=production bun src/index.ts",
+        "test": "bun test"
     },
     "repository": {
         "type": "git",
@@ -29,7 +34,8 @@
         "install": "^0.13.0",
         "jest": "^29.7.0",
         "ts-jest": "^29.2.5",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "tsup": "^8.3.5"
     },
     "devDependencies": {
         "typescript": "^4.0.0"
