--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,29 @@
 {
   "compilerOptions": {
-    "target": "es5", // Specify ECMAScript target version
-    "module": "commonjs", // Specify module code generation
-    "declaration": true, // Generate corresponding '.d.ts' file
-    "outDir": "./dist", // Redirect output structure to the 'dist' directory
-    "strict": true, // Enable all strict type-checking options
-    "esModuleInterop": true, // Enables emit interoperability between CommonJS and ES Modules
-    "skipLibCheck": true // Skip type checking of declaration files
+    "target": "es2022",
+    "module": "ESNext",
+    "lib": [
+      "es2022",
+      "dom",
+      "dom.iterable"
+    ],
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "noEmit": false,
+    "declaration": true,
+    "outDir": "./dist",
+    "verbatimModuleSyntax": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": [
     "src/**/*"
-  ], // Include all TypeScript files in the 'src' directory
+  ],
   "exclude": [
     "node_modules",
-    "**/*.spec.ts"
-  ] // Exclude node_modules and test files
+    "dist"
+  ]
 }
